review of all the code and some adjustments
